# rust-assistant

./: .gitignore  Assistant.toml  CHANGELOG.md  Cargo.toml  LICENSE  Readme.md  config.sh  lcov.info  requirement.txt  run.sh
docs/: development.md  faq.md  installation.md  known-issues.md  roadmap.md  technical.md  troubleshooting.md
src/: cli.rs  error.rs  main.rs  ui.rs
src/assistant/: config.rs  conversation.rs  llm.rs  mod.rs
src/py-engine/: kokoro-engine.py
src/pyengine/: kokoro-engine.py
src/stt/: audio.rs  io.rs  mod.rs  recorder.rs  transcriber.rs
src/tts/: engine.rs  kokoro.rs  mod.rs  models.rs  voice.rs
