[package]
name = "Assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking","json"] }
rodio = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal="0.15"
hound="3"
tokio = { version = "1", features = ["full"] }