[package]
name = "Assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking","json"] }
rodio = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3"
tokio = { version = "1", features = ["full"] }
pyo3 = { version = "0.22", features = ["auto-initialize"] }
clap = { version = "4", features = ["derive","cargo","color"] }
clap_complete = "4"
indicatif = "0.17"
termcolor = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
thiserror = "1"
toml = "0.8"
config = "0.14"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
